--- a/new-properties.html
+++ b/new-properties.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
+  <title>Exceptional Realty Group - luxury Homes - New Properties</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="style.css"
-  <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"</script>
+  <link rel="stylesheet" href="style.css">
+  <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
   <header>
