--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"></link>
+  <link rel="stylesheet" href="css/style.css"></link>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
   <header>
     <div id="logo">
       <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <h2 class="milk-text">Realty Group</h2>
     </div>
 
     <nav>
@@ -62,7 +65,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -76,6 +79,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
