--- a/new-properties.html
+++ b/new-properties.html
@@ -1,8 +1,11 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <link rel="stylesheet" href="CSS/style.css"> 
 </head>
 <body>
   <header>
@@ -43,7 +46,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -57,6 +60,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
