--- a/market-report.html
+++ b/market-report.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+  <link rel="stylesheet" href="http:https://cdnjs.cloudflare.com/ajax/libs/
+    normalize/5.0.0/normalize.min.css">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+      </script>
+    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <header>
@@ -69,7 +75,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -83,6 +89,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
