--- a/index.html
+++ b/index.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <title>Exceptional Reality Group - Luxury Homes - About</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
+
   <body>
     <header>
-      <!-- logo -->
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <div id="logo">
+        <h1>Excpetional</h1>
+        <h2>Reality Group</h2>
+      </div>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a href="index.html">About</a>
+        <a href="new-properties.html">New Properties</a>
+        <a href="real-estate-listings.html">Listing</a>
+        <a href="market-report.html">Market Report</a>
+        <a href="contact.html">Contact</a>
+        <a href="https://portal.hud.gov/hudportal/HUD" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
     <section id="featured-property">
       <figure>
-        <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
+        <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Reality">
+        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards</figcaption>
       </figure>
 
-      <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+      <!-- foldername/ = go inside folder
+      filename = use a file in the current directory
+      ../ = leave the current folder, go to parent folder
+      -->
+
+
+      <p>1 haec sunt nomina filiorum Israhel qui ingressi sunt Aegyptum cum Iacob singuli cum domibus suis introierunt <br>2 Ruben Symeon Levi Iuda 3 Isachar Zabulon et Beniamin 4 Dan et Nepthalim Gad et Aser 5 erant igitur omnes animae eorum qui egressi sunt de femore Iacob septuaginta Ioseph autem in Aegypto erat 6 quo mortuo et universis fratribus eius omnique cognatione illa 7 filii Israhel creverunt et quasi germinantes multiplicati sunt ac roborati nimis impleverunt terram 8 surrexit interea rex novus super Aegyptum qui ignorabat Ioseph 9 et ait ad populum suum ecce populus filiorum Israhel multus et fortior nobis 10 venite sapienter opprimamus eum ne forte multiplicetur et si ingruerit contra nos bellum addatur inimicis nostris expugnatisque nobis egrediatur e terra.</p>
+      <p>1 haec sunt nomina filiorum Israhel qui ingressi sunt Aegyptum cum Iacob singuli cum domibus suis introierunt 2 Ruben Symeon Levi Iuda 3 Isachar Zabulon et Beniamin 4 Dan et Nepthalim Gad et Aser 5 erant igitur omnes animae eorum qui egressi sunt de femore Iacob septuaginta Ioseph autem in Aegypto erat 6 quo mortuo et universis fratribus eius omnique cognatione illa 7 filii Israhel creverunt et quasi germinantes multiplicati sunt ac roborati nimis impleverunt terram 8 surrexit interea rex novus super Aegyptum qui ignorabat Ioseph 9 et ait ad populum suum ecce populus filiorum Israhel multus et fortior nobis 10 venite sapienter opprimamus eum ne forte multiplicetur et si ingruerit contra nos bellum addatur inimicis nostris expugnatisque nobis egrediatur e terra.</p>
     </section>
 
     <section id="promotional">
-      <figure>
-        <video controls>
-          <source src="videos/real-estate.mp4" type="video/mp4"> 
-          <source src="videos/real-estate.ogv" type="video/ogg">
-          Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
-        </video>
-        <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
-      </figure>
-    </section>
 
-    <section id="details">
+    <figure>
+       <video controls>
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser does not support HMTL5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>
+       </video>
+       <figcaption>Expectational Realty Group Promotional Video - Sourc: archive.org</figcaption>
+     </figure>
+     </section>
+
+     <section id="details">
       <div>
         <h3>Contact</h3>
         <p>
@@ -69,9 +87,10 @@
         </p>
       </div>
     </section>
-
+    <br>
+    <br>
     <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved.
+      &copy: 2014 Exceptional Reality. All Rights Reserved.
     </footer>
 
   </body>
