--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -8,7 +8,7 @@
   <header>
     <div id="logo">
       <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <h2 class="milk-text">Realty Group</h2>
     </div>
 
     <nav>
@@ -36,7 +36,7 @@
   <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
   </section>
-  
+
   <section>
     <h3>Property Archive</h3>
     <h4>2014</h4>
@@ -86,7 +86,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
