--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -40,7 +40,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
   </section>
 
-  <h2>Featured Listings</h2>
+  <h2 class="milk-text">Featured Listings</h2>
 
   <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
@@ -87,7 +87,7 @@
         </address>
       </div>
 
-      <div>
+      <div id="details">
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
