--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <!--normalize, css sheet, modernizr-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
+
   <body>
     <header>
-      <!-- logo -->
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <div id="logo"> <!--Logo-->
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h1>
+      </div>
 
-      <nav>
+      <nav> <!--links-->
         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
@@ -18,26 +24,29 @@
     <section id="featured-property">
       <figure>
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
+        <figcaption>345 Carl Street Apt 12, Carrol Rd. Booklyn, NY - Photo by Denise Richards.</figcaption>
       </figure>
 
-      <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt <br>
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
+      laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
 
     <section id="promotional">
-      <figure>
+      <figure> <!-- promo video -->
         <video controls>
-          <source src="videos/real-estate.mp4" type="video/mp4"> 
+          <source src="videos/real-estate.mp4" type="video/mp4">
           <source src="videos/real-estate.ogv" type="video/ogg">
-          Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
+          Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank"></a>Please upgrade your browser
         </video>
         <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
       </figure>
     </section>
 
     <section id="details">
-      <div>
+      <div> <!--Contact-->
         <h3>Contact</h3>
         <p>
           email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -51,7 +60,7 @@
         </address>
       </div>
 
-      <div>
+      <div> <!--External Links-->
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
@@ -60,7 +69,7 @@
         </p>
       </div>
 
-      <div>
+      <div> <!--Social Media-->
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">Youtube</a><br>
