--- a/market-report.html
+++ b/market-report.html
@@ -1,52 +1,57 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
-</head>
-<body>
-  <header>
-    <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-    </div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+    <!--normalize, css sheet, modernizr-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  </head>
 
-    <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-    </nav>
-  </header>
+  <body>
+    <header>
+      <div id="logo"> <!--Logo-->
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h1>
+      </div>
 
-  <section>
-    <h3>Market Report</h3>
-    <table>
-      <tr>
-        <th>Address</th>
-        <th>City</th>
-        <th>State</th>
-        <th>Sales Price</th>
-      </tr>
-      <tr>
-        <td>2345 Fairview Ln.</td>
-        <td>Brooklyn</td>
-        <td>NY</td>
-        <td>$1.2 mil</td>
-      </tr>
-      <tr>
-        <td>974 Clapton St.</td>
-        <td>Queens</td>
-        <td>NY</td>
-        <td>$998 k</td>
-      </tr>
-      <tr>
-        <td>14A Belmont Way</td>
-        <td>Bronx</td>
-        <td>NY</td>
-        <td>$874 k</td>
-      </tr>
-    </table>
-  </section>
+      <nav> <!--Nav links-->
+        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      </nav>
+    </header>
 
-  <section id="details">
+    <section>
+      <h3>Market Report</h3>
+      <table>
+        <tr>
+          <th>Address</th>
+          <th>City</th>
+          <th>State</th>
+          <th>Sales Price</th>
+        </tr>
+        <tr>
+          <td>2345 Fairview Ln.</td>
+          <td>Brooklyn</td>
+          <td>NY</td>
+          <td>$1.2 mil</td>
+        </tr>
+        <tr>
+          <td>974 Clapton St.</td>
+          <td>Queens</td>
+          <td>NY</td>
+          <td>$998 k</td>
+        </tr>
+        <tr>
+          <td>14A Belmont Way</td>
+          <td>Bronx</td>
+          <td>NY</td>
+          <td>$874 k</td>
+        </tr>
+      </table>
+    </section>
+
+    <section id="details">
       <div>
         <h3>Contact</h3>
         <p>
@@ -69,7 +74,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -83,6 +88,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
-</body>
+    
+  </body>
 </html>
