--- a/new-properties.html
+++ b/new-properties.html
@@ -1,26 +1,31 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
-</head>
-<body>
-  <header>
-    <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-    </div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
+    <!--normalize, css sheet, modernizr-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  </head>
 
-    <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-    </nav>
-  </header>
+  <body>
+    <header>
+      <div id="logo"> <!--Logo-->
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h1>
+      </div>
 
-  <section>
-    <h3>New Properties</h3>
-  </section>
+      <nav> <!--links-->
+        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      </nav>
+    </header>
 
-  <section id="details">
+    <section>
+      <h3>New Properties</h3>
+    </section>
+
+    <section id="details">
       <div>
         <h3>Contact</h3>
         <p>
@@ -43,7 +48,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -57,6 +62,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
-</body>
+    
+  </body>
 </html>
