--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/detectizr/2.2.0/detectizr.min.js">  
+    </script>
   </head>
   <body>
     <header>
@@ -28,7 +34,7 @@
     <section id="promotional">
       <figure>
         <video controls>
-          <source src="videos/real-estate.mp4" type="video/mp4"> 
+          <source src="videos/real-estate.mp4" type="video/mp4">
           <source src="videos/real-estate.ogv" type="video/ogg">
           Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
         </video>
