--- a/new-properties.html
+++ b/new-properties.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <!--this provides cross browser compatability -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- links style sheet to HTML -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+  </script>
   <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
 </head>
 <body>
@@ -43,7 +49,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -57,6 +63,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
