--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <!--this provides cross browser compatability -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- links style sheet to HTML -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+  </script>
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
 </head>
 <body>
   <header>
     <div id="logo">
       <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <h2 class="milk-text">Realty Group</h2>
+      <!-- if you want to add another class, you can just add a space, ie class="milk text anotherclass another class" -->
     </div>
 
     <nav>
@@ -36,7 +43,7 @@
   <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
   </section>
-  
+
   <section>
     <h3>Property Archive</h3>
     <h4>2014</h4>
@@ -86,7 +93,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
