--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+      <link rel="stylesheet" href="css/style.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+      </script>
+      <style>
+      @import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900');
+      </style>
+
+      <style>
+      @import url('https://fonts.googleapis.com/css?family=Clicker+Script');
+      </style>
 </head>
 <body>
   <header>
@@ -62,7 +73,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -76,6 +87,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
