--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+      <link rel="stylesheet" href="css/style.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+      </script>
+      <style>
+      @import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900');
+      </style>
+
+      <style>
+      @import url('https://fonts.googleapis.com/css?family=Clicker+Script');
+      </style>
 </head>
 <body>
   <header>
@@ -36,7 +47,7 @@
   <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
   </section>
-  
+
   <section>
     <h3>Property Archive</h3>
     <h4>2014</h4>
@@ -86,7 +97,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
