--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stlylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+      
   </head>
   <body>
     <header>
@@ -74,6 +75,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"> </script>
   </body>
 </html>
