--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+
+    </script>
   </head>
   <body>
     <header>
       <!-- logo -->
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <div id="logo">
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+      </div>
 
       <nav>
         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a>
