--- a/market-report.html
+++ b/market-report.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  </script>
 </head>
 <body>
   <header>
@@ -12,7 +17,9 @@
     </div>
 
     <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a>
+      <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a>
+      <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
     </nav>
   </header>
 
@@ -69,7 +76,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -83,6 +90,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
